cleaned up comments